# ExcelsiorFull

./: .dockerignore  .env  .env.test  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yml  docker.env  dockerfile
.github/workflows/: deploy.yml
Ms1/: .env  Cargo.toml  docker-compose.yml
Ms1/migrations/: prod_environment.sql
Ms1/src/: lib.rs  main.rs  state.rs
Ms1/src/db/: connection.rs
Ms1/src/domain/: database.rs  general.rs  mod.rs
Ms1/src/domain/tests/: database_test.rs  general_test.rs  mod.rs
Ms1/src/engine/: db_engine.rs  mod.rs
Ms1/src/engine/tests/: db_engine_test.rs  mod.rs
Ms1/src/handlers/: db_handler.rs  mod.rs  outbound_handler.rs  simple_handler.rs  user_handler.rs
Ms1/src/handlers/tests/: db_handler_test.rs  mod.rs  simple_handler_test.rs
Ms1/src/models/: database.rs
Ms1/src/routes/: mod.rs
Ms1/src/tests/: external_test.rs  model_test.rs  test_utils.rs
Ms1/src/tests/middleware/: compression_test.rs  limit_test.rs
Ms1/src/utils/: mod.rs  un_utils.rs
Ms1/src/utils/tests/: mod.rs  un_utils_test.rs
Ms1/tests/: dev_environment.sql  integration_test.rs
Ms2/: .env  Cargo.toml
Ms2/src/: main.rs  state.rs
Ms2/src/handlers/: mod.rs  outbound_handler.rs  simple_handler.rs
Ms2/src/routes/: mod.rs
src/: main.rs
src/database/: connection.rs
src/database/migrations/: 000-prod_environment.sql  001-migration.sql  002-migration.sql  prod_environment.sql
src/domain/: database.rs  general.rs
src/domain/tests/: general_test.rs
src/engine/tests/: db_engine_test.rs  mod.rs
src/handlers/: simple_handler.rs
src/handlers/tests/: db_handler_test.rs  mod.rs  simple_handler_test.rs
src/routes/: mod.rs
src/utils/: constants.rs  logo.txt  main_utils.rs  mod.rs  otel_config.rs  un_utils.rs
src/utils/tests/: main_utils_test.rs  mod.rs  otel_config_test.rs
tests/: dev_environment.sql  integration_test.rs
