[package]
name = "Ms1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace"] }
sqlx = { version = "0.7", features = ["macros", "mysql", "time", "runtime-tokio-native-tls"] }
time = {version = "0.3.22", default-features = false, features = ["formatting", "macros"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }